# nvprime

./: Cargo.toml  README.md  justfile  primers.conf
client/: Cargo.toml
client/src/: main.rs
client/src/runner/: hooks.rs  mod.rs
client/src/system/: mod.rs  nvidia.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs
daemon/: Cargo.toml
docs/: CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md  SYSTEM_CONFIG.md
polkit/: 50-nvprime.rules  com.github.nvprime.policy  install  install.sh
sample/: nvprime.conf  primers.conf  testenv.sh
src/: lib.rs  main.rs
src/client/: hooks.rs
src/common/: config.rs  hooks.rs  ipc.rs  logging.rs  mod.rs  nvgpu.rs  serde.rs
src/daemon/: nvidia.rs
src/ipc/: mod.rs  protocol.rs  serde.rs
src/logging/: mod.rs
src/runner/: env.rs  env_utils.rs  env_var.rs  hooks.rs  launcher.rs  mod.rs  process.rs  renice.rs
src/service/: daemon.rs  mod.rs  nvtuner.rs  privilege.rs  process.rs  ryzen.rs
src/system/: mod.rs  nvidia.rs  privilege.rs  ryzen.rs
system/: com.github.nvprime.conf  install.sh  nvprime.service
