[[bin]]
name = "nvprime"
path = "src/bin/nvprime.rs"

[[bin]]
name = "nvprime-sys"
path = "src/bin/nvprime_sys.rs"

[package]
name = "nvprime"
version = "0.1.0"
edition = "2024"
default-run = "nvprime"
authors = ["The quick brown fox jumps over the lazy dog"]
description = "Minimalist NVIDIA PRIME render offload wrapper with config support"
license = "MIT"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# D-Bus communication
zbus = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

# NVIDIA GPU management
nvml-wrapper = "0.11"

# System utilities
nix = { version = "0.30", features = ["user", "resource"] }
libc = "0.2"
dirs = "5"
chrono = "0.4"

# Perfect hash functions for static maps
phf = { version = "0.13", features = ["macros"] }

[dev-dependencies]
# Testing utilities
tempfile = "3"
mockall = "0.13"
serial_test = "3"
uuid = "1"
