[package]
name = "nvprime"
version = "0.1.0"
edition = "2024"
default-run = "nvprime"
authors = ["The quick brown fox jumps over the lazy dog"]
description = "Minimalist NVIDIA PRIME render offload wrapper with config support"
license = "MIT"

[[bin]]
name = "nvprime"
path = "src/bin/nvprime.rs"

[[bin]]
name = "nvprime-sys"
path = "src/bin/nvprime_sys.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# D-Bus communication
zbus = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1"

# NVIDIA GPU management
nvml-wrapper = "0.12"

# System utilities
chrono = "0.4"
dirs = "5"
libc = "0.2"
nix = { version = "0.31", features = ["user", "resource"] }

# Perfect hash functions for static maps
phf = { version = "0.14", features = ["macros"] }

[dev-dependencies]
# Testing utilities
mockall = "0.15"
serial_test = "3"
tempfile = "3"
uuid = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
