[package]
name = "nvprime"
version = "0.1.0"
edition = "2024"
default-run = "nvprime"
authors = ["The quick brown fox jumps over the lazy dog"]
description = "Minimalist NVIDIA PRIME render offload wrapper with config support"
license = "MIT"

[[bin]]
name = "nvprime"
path = "src/bin/nvprime.rs"

[[bin]]
name = "nvprime-sys"
path = "src/bin/nvprime_sys.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
nix = { version = "0.31", features = ["user", "resource"] }
nvml-wrapper = "0.12"
phf = { version = "0.14", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
zbus = "5"

[dev-dependencies]
mockall = "0.15"
serial_test = "3"
tempfile = "3"
uuid = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
