[package]
name = "primers-common"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
chrono.workspace = true
env_logger.workspace = true

zbus.workspace = true
dirs.workspace = true
anyhow.workspace = true

nix.workspace = true
clap.workspace = true
tokio.workspace = true

toml = "0.9"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "prime_rs_common"
path = "src/lib.rs"
